   dynamically resolving libraries and ExecutablePaths; with that, these
   packages would never get updated in a permanent sandbox. The new version
   tracking from above now takes care of that. (LP: #1352591)
 * Fix report.test_add_proc_info test to stop assuming that pid 1 is named
   "init", as one can specify a different one on the kernel command line.

2.14.6 (2014-08-18)
-------------------
 * general-hooks/generic.py: Fix hook crash if there are non-distro libraries
   and no user interface.
 * collect_info(): Don't assume that reports have a ProblemType. Fixes crashes
   with apport-collect. (LP: #1325729)
 * apport-retrace: Declare -s/-g/-o as mutually exclusive, to get proper error
   messages instead of silent misbehaviour. (LP: #1352450)
 * apport-gtk: Drop usage of deprecated GTK stock items. (LP: #1348116)

2.14.5 (2014-07-29)
-------------------
 * apport-bug: Stop checking the autoreport flag and calling
   whoopsie-upload-all; these two are different tasks, and that breaks bug
   reporting. (LP: #1339663)
 * apt/dpkg get_file_package(): If checking for uninstalled packages, don't
   use package information from the host system, but always look it up in the
   correct indexes. Otherwise this returns wrong results when files move to a
   different package between releases. Thanks Brian Murray! (LP: #1336062)
 * apt/dpkg install_packages(): Disable fetching apt translation indexes, to
   save some bandwidth.
 * whoopsie-upload-all: Ignore crash reports with incomplete core dumps instead
   of crashing on them. Thanks Brian Murray. (LP: #1329520)
 * etc/default/apport: Fix comment to use "service" instead of calling the
   init.d script directly.
 * whoopsie-upload-all: Collect hooks information to gather ApportVersion,
   NonfreeKernelModules, and SystemImageInfo. Do this before collecting package
   data to minimize hook run time. (LP: #1349579)
 * Adjust report.test_get_logind_session test to work with systemd >= 205.