@@ -319,7 +319,10 @@ if options.gdb:
 else:
     # regenerate gdb info
     apport.memdbg('before collecting gdb info')
-    report.add_gdb_info(sandbox)
+    try:
+        report.add_gdb_info(sandbox)
+    except IOError as e:
+        apport.fatal(str(e))
     if options.sandbox == 'system':
         apt_root = os.path.join(cache, 'system', 'apt')
     elif options.sandbox:
