@@ -61,7 +61,7 @@ def process_report(report):
 
         try:
             r.add_gdb_info()
-        except EOFError as e:
+        except (IOError, EOFError) as e:
             sys.stderr.write('ERROR: processing %s: %s\n' % (report, str(e)))
             return None
         try:
